<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileTimeViewModel"
            type="com.nehads.friends.main.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.nehads.friends.main.profile.ProfileFragment">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/common_toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_name"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include_toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/hint_name"
                android:text="Alexaa"
                app:name="@{profileTimeViewModel.name}"
                android:textColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/your_email"
                app:email="@{profileTimeViewModel.email}"
                android:text="+91 8599586701"
                android:textColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/btn_history"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:focusedByDefault="true"
                android:text="@string/history"
                android:textColor="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/margin16"
            android:checked="@{profileTimeViewModel.isAlarmOn}"
            android:onCheckedChanged="@{(button, on)-> profileTimeViewModel.setAlarm(on)}"
            android:text="@string/remind_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_history" />

        <TextView
            android:id="@+id/tv_counter"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginEnd="@dimen/margin16"
            android:text="0"
            app:elapsedTime="@{profileTimeViewModel.elapsedTime}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_reminder" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            style="@style/MaterialButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_email" />

        <include layout="@layout/page_indicator_overlay" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>